Created main menu page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
+
     <string name="app_name">Android-Download</string>
+    <string name="download_options">Download options</string>
+    <string name="intent_service">Intent Service</string>
+
 </resources>
