Created working download queue with status (pending, running and completed) using IntentService and ResultReceiver! Yet to fix running process output.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="app_name">Android-Download</string>
     <string name="download_options">Download options</string>
     <string name="intent_service">Intent Service</string>
+    <string name="message_in">Input</string>
+    <string name="message_out">Output</string>
 
 </resources>
